# tracegarden

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release-test.yml  release.yml
docs/: DESIGN.md  WHAT_IT_RECORDS.md
tests/: test_celery_isolation.py  test_celery_signals.py  test_django_middleware.py  test_fastapi_async_save.py  test_fastapi_middleware.py  test_fingerprint.py  test_flask_middleware.py  test_http_instrumentation.py  test_pending_spans_ttl.py  test_redaction.py  test_storage.py  test_trace_correlation.py  test_ui_routes.py
tracegarden/: __init__.py
tracegarden/core/: __init__.py  context.py  fingerprint.py  models.py  redaction.py  runtime.py  storage.py  tracecontext.py
tracegarden/integrations/: __init__.py  http.py  sqlalchemy.py
tracegarden/integrations/celery/: __init__.py  signals.py
tracegarden/integrations/django/: __init__.py  apps.py  middleware.py  signals.py
tracegarden/integrations/fastapi/: __init__.py  middleware.py
tracegarden/integrations/flask/: __init__.py  extension.py
tracegarden/otel/: __init__.py  setup.py
tracegarden/ui/: __init__.py  django_urls.py  routes.py
tracegarden/ui/static/: tracegarden.css
tracegarden/ui/templates/: base.html  detail.html  index.html
