[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracegarden"
version = "0.1.0"
description = "Developer-first visual backend devtools for Django, Flask, and FastAPI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "jinja2>=3.1.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
django = ["django>=3.2"]
flask = ["flask>=2.0"]
fastapi = ["fastapi>=0.95.0", "starlette>=0.27.0"]
celery = ["celery>=5.0", "redis>=5.0"]
dev = ["pytest", "pytest-asyncio", "httpx"]

[project.urls]
Homepage = "https://github.com/tracegarden/tracegarden"
Documentation = "https://tracegarden.dev/docs"
Repository = "https://github.com/tracegarden/tracegarden"
Issues = "https://github.com/tracegarden/tracegarden/issues"

[tool.hatch.build.targets.wheel]
packages = ["tracegarden"]

[tool.pytest.ini_options]
testpaths = ["tests"]
